# nvimhub

./: .gitignore  README.md  bash.sh
fetcher/: Cargo.toml
fetcher/src/: main.rs
gateway/: Dockerfile  main.go
web_scraper/: Cargo.toml
web_scraper/src/: main.rs
